<resources>
    <string name="app_name">Medic.ai</string>
    <string name="diagnosis_at_your_doorstep">Diagnosis at your doorstep</string>
    <string name="medic_ai">Medic.ai</string>
    <string name="stay_fit_stay_positive">Stay fit, Stay positive</string>
    <string name="what_do_you_want_us_to_diagnose">What do you want us to diagnose?</string>
    <string name="eye">Eye</string>
    <string name="lungs">Lungs</string>
    <string name="heart">Heart</string>
    <string name="skin">Skin</string>
    <string name="health_tips">Health Tips</string>
    <string name="heart_care">Welcome to Heart Diagnostic Centre</string>
    <string name="please_enter_your_age">Please enter your age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_your_blood_pressure">Enter your blood pressure</string>
    <string name="enter_cholestrol_level">Enter Cholestrol level</string>
    <string name="blood_sugar_120_mg_dl"><![CDATA[Blood Sugar > 120 mg/dl ?]]></string>
    <string name="chest_pain_type">Chest Pain type</string>
    <string name="asymptomatic">Asymptomatic</string>
    <string name="non_anginal_pain">Non-Anginal Pain</string>
    <string name="atypical_angina">Atypical Angina</string>
    <string name="typical_angina">Typical Angina</string>
    <string name="lv_hypertrophy">LV Hypertrophy</string>
    <string name="st_t_abnormality">ST-T Abnormality</string>
    <string name="normal_thal">Normal</string>
    <string name="chest_pain_due_to_exercise">Chest pain due to exercise?</string>
    <string name="st_depression_caused_by_exercise">ST depression caused by exercise</string>
    <string name="slope_of_peak_exercise_st_segment">Slope of peak exercise ST segment</string>
    <string name="diagnosis_results">Diagnosis Results:</string>
    <string name="major_vessel_0_3">Major Vessel(0-3)</string>
    <string name="chances_of_heart_problem">Chances of heart problem:</string>
    <string name="_0">0</string>
    <string name="downsloping">Downsloping</string>
    <string name="flat">Flat</string>
    <string name="unsloping">Upsloping</string>
    <string name="begin_diagnosis">Begin Diagnosis</string>
    <string name="thalassmia_score">Thalassmia Score</string>
    <string name="nan">Nan</string>
    <string name="normal">Normal</string>
    <string name="fixed_defect">Fixed Defect</string>
    <string name="reversal_defect">Reversal Defect</string>
    <string name="ecg_report">ECG Report</string>
    <string name="enter_max_heart_rate">Enter Max Heart Rate</string>
    <string name="brain">Brain</string>
    <string name="prediction">prediction</string>
    <string name="run_diagnosis">Run Diagnosis</string>
    <string name="give_end_to_end_cropped_image_only">Give end to end cropped image only</string>
    <string name="run_diagnosis1">Run Diagnosis</string>
</resources>