<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".heartActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF362E">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/aclonica"
                android:text="@string/heart_care"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Age"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="number"
                    android:hint="@string/please_enter_your_age"
                    android:textAlignment="center"
                    android:fontFamily="@font/aclonica"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_bar"/>
                <RadioGroup
                    android:id="@+id/sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:fontFamily="@font/aclonica"
                        android:checked="false"/>
                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:checked="false"
                        android:fontFamily="@font/aclonica"/>
                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/aclonica"
                    android:textSize="16sp"
                    android:text="@string/chest_pain_type"/>
                <RadioGroup
                    android:id="@+id/chestPainType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="1"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/typicalAngina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/typical_angina"/>
                    <RadioButton
                        android:id="@+id/atypicalAngina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/atypical_angina"/>
                    <RadioButton
                        android:id="@+id/nonAngina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/non_anginal_pain"/>
                    <RadioButton
                        android:id="@+id/aSymptomatic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asymptomatic"/>
                </RadioGroup>
                <EditText
                    android:id="@+id/bloodPressure"
                    android:layout_margin="10dp"
                    android:inputType="number"
                    android:hint="@string/enter_your_blood_pressure"
                    android:textAlignment="center"
                    android:fontFamily="@font/aclonica"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_bar"/>
                <EditText
                    android:id="@+id/EnterCholestrol"
                    android:layout_margin="10dp"
                    android:inputType="number"
                    android:hint="@string/enter_cholestrol_level"
                    android:textAlignment="center"
                    android:fontFamily="@font/aclonica"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_bar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/blood_sugar_120_mg_dl"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/aclonica"/>
                <RadioGroup
                    android:id="@+id/bloodSugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:gravity="center">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"/>
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/ecg_report"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/aclonica"/>
                <RadioGroup
                    android:id="@+id/ecgReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/normalReport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"/>
                    <RadioButton
                        android:id="@+id/stAbnormality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/st_t_abnormality"/>
                    <RadioButton
                        android:id="@+id/lvHypertrophy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lv_hypertrophy"/>
                </RadioGroup>

                <EditText
                    android:id="@+id/MaxHeartRate"
                    android:layout_margin="10dp"
                    android:inputType="number"
                    android:hint="Enter Max Heart Rate"
                    android:textAlignment="center"
                    android:fontFamily="@font/aclonica"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_bar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/chest_pain_due_to_exercise"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/aclonica"/>
                <RadioGroup
                    android:id="@+id/exercisePain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/painYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"/>
                    <RadioButton
                        android:id="@+id/painNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"/>
                </RadioGroup>

                <EditText
                    android:id="@+id/StDepression"
                    android:layout_margin="10dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/st_depression_caused_by_exercise"
                    android:textAlignment="center"
                    android:fontFamily="@font/aclonica"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_bar"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/slope_of_peak_exercise_st_segment"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/aclonica"/>
                <RadioGroup
                    android:id="@+id/slopePeak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/peakUpslope"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unsloping"/>
                    <RadioButton
                        android:id="@+id/slopeFlat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flat"/>
                    <RadioButton
                        android:id="@+id/slopeDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downsloping"/>
                </RadioGroup>

                <EditText
                    android:id="@+id/majorVessel"
                    android:layout_margin="10dp"
                    android:inputType="number"
                    android:hint="@string/major_vessel_0_3"
                    android:textAlignment="center"
                    android:fontFamily="@font/aclonica"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form_bar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/thalassmia_score"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/aclonica"/>
                <RadioGroup
                    android:id="@+id/thalSlope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/NanScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nan"/>
                    <RadioButton
                        android:id="@+id/normalScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"/>
                    <RadioButton
                        android:id="@+id/fixedDefect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fixed_defect"/>
                    <RadioButton
                        android:id="@+id/reversalDefect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reversal_defect"/>
                </RadioGroup>

                <Button
                    android:id="@+id/predictBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_light"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="60dp"
                    android:text="@string/begin_diagnosis"
                    android:fontFamily="@font/aclonica" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <include
        layout="@layout/bottom_sheet"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>